--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:id="@+id/search"
+        android:icon="@drawable/ic_search_white_48dp"
+        app:showAsAction="always"
+        android:title="@string/Search">
+    </item>
+    <item android:id="@+id/img_add_contact"
+        android:icon="@drawable/ic_plus_white"
+        app:showAsAction="always"
+        android:title="@string/add_contact">
+    </item>
+    <item android:id="@+id/menu_favorites"
+        android:icon="@drawable/ic_star"
+        app:showAsAction="always"
+        android:title="@string/favorites">
+    </item>
 </menu>
